force-app/main/default/objects/Apttus__MergeEventDetail__c/Apttus__MergeEventDetail__c.object-meta.xml
<CustomObject>
    <description>Holds document merge event details</description>
    <label>Merge Event Detail</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Event Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>