force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__DocumentVersionDetail2Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionDetail2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The document version detail received from the reviewer</description>
    <inlineHelpText>The document version detail received from the reviewer</inlineHelpText>
    <label>Received Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Merge Event Details (Received)</relationshipLabel>
    <relationshipName>Merge_Event_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>