force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__DocumentVersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The document version detail sent to the reviewer</description>
    <inlineHelpText>The document version detail sent to the reviewer</inlineHelpText>
    <label>Sent Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Merge Event Details (Sent)</relationshipLabel>
    <relationshipName>Merge_Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>