force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__MergeEventId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MergeEventId__c</fullName>
    <description>Id of the merge event this is associated with</description>
    <inlineHelpText>Id of the merge event this is associated with</inlineHelpText>
    <label>Merge Event</label>
    <referenceTo>Apttus__MergeEvent__c</referenceTo>
    <relationshipLabel>Merge Event Details</relationshipLabel>
    <relationshipName>Merge_Event_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>