force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__ReviewEndTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewEndTime__c</fullName>
    <description>The review end time</description>
    <inlineHelpText>The review end time</inlineHelpText>
    <label>Review End Time</label>
    <type>DateTime</type>
</CustomField>