force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__ReviewStartTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewStartTime__c</fullName>
    <description>The review start time</description>
    <inlineHelpText>The review start time</inlineHelpText>
    <label>Review Start Time</label>
    <type>DateTime</type>
</CustomField>