force-app/main/default/objects/Apttus__MergeEventDetail__c/fields/Apttus__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UserEmail__c</fullName>
    <description>The reviewer&apos;s email address</description>
    <inlineHelpText>The reviewer&apos;s email address</inlineHelpText>
    <label>Reviewer Email</label>
    <type>Email</type>
</CustomField>